Batch update of generated files

--- a/home_quizzes.html
+++ b/home_quizzes.html
@@ -471,6 +471,95 @@
     */
     const newsData = [
   {
+    "title": "Bộ đội mới xuất ngũ đi xuất khẩu lao động cần phải có bằng cấp 2?",
+    "content": "Bài viết cung cấp thông tin về việc người lao động xuất ngũ từ quân đội có cần bằng cấp 2 để tham gia xuất khẩu lao động hay không. Luật sư Nguyễn Ngô Quang Nhật đã tư vấn rằng pháp luật Việt Nam không yêu cầu người lao động phải có bằng cấp 2 để đi làm việc ở nước ngoài. Tuy nhiên, người lao động cần chú ý đến các yêu cầu của nước tiếp nhận lao động, bao gồm sức khỏe và trình độ chuyên môn.",
+    "link": "https://tuoitre.vn/bo-doi-moi-xuat-ngu-di-xuat-khau-lao-dong-can-phai-co-bang-cap-2-2025031522262342.htm",
+    "cat": "phap-luat",
+    "positivity": 7,
+    "importance": 6,
+    "question": "Bộ đội xuất ngũ có cần bằng cấp 2 để xuất khẩu lao động không?",
+    "answers": [
+      {
+        "text": "Không cần bằng cấp 2.",
+        "correct": true
+      },
+      {
+        "text": "Cần bằng cấp 3.",
+        "correct": false
+      },
+      {
+        "text": "Cần bằng cấp 1.",
+        "correct": false
+      },
+      {
+        "text": "Cần bằng đại học.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Loạn giá heo hơi, doanh nghiệp chăn nuôi lớn bỏ niêm yết giá",
+    "content": "Giá heo hơi tại miền Nam vào ngày 18-3 dao động từ 77.000 đến 80.000 đồng/kg, thấp hơn so với mức đỉnh 84.000 đồng/kg trước đó, trong khi miền Bắc ghi nhận giá từ 72.500 đến 75.500 đồng/kg. Nhiều doanh nghiệp chăn nuôi lớn không niêm yết giá bán ra, dẫn đến tình trạng loạn giá. Một số doanh nghiệp duy trì giá xuất chuồng khoảng 70.000 đồng/kg để bình ổn thị trường, nhưng thực tế giá mua vào cao hơn nhiều. Nếu không có giải pháp kịp thời, giá heo hơi có thể giữ ở mức cao trong thời gian tới.",
+    "link": "https://tuoitre.vn/loan-gia-heo-hoi-doanh-nghiep-chan-nuoi-lon-bo-niem-yet-gia-20250319075257693.htm",
+    "cat": "kinh-doanh",
+    "positivity": 4,
+    "importance": 8,
+    "question": "Tại sao giá heo hơi lại không ổn định hiện nay?",
+    "answers": [
+      {
+        "text": "Doanh nghiệp chăn nuôi lớn không niêm yết giá bán ra",
+        "correct": true
+      },
+      {
+        "text": "Giá heo hơi tăng do nhu cầu thị trường cao",
+        "correct": false
+      },
+      {
+        "text": "Giá heo hơi giảm do nguồn cung dồi dào",
+        "correct": false
+      },
+      {
+        "text": "Thời tiết xấu ảnh hưởng đến chăn nuôi",
+        "correct": false
+      },
+      {
+        "text": "Giá heo hơi thay đổi theo từng ngày",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Nagelsmann nhắc lại mục tiêu vô địch World Cup 2026",
+    "content": "HLV Julian Nagelsmann của đội tuyển Đức nhấn mạnh mục tiêu giành chức vô địch World Cup 2026, sau thất bại tại Euro 2024. Trong buổi họp báo, ông bày tỏ sự tức giận về một tình huống gây tranh cãi trong trận thua Tây Ban Nha ở tứ kết Euro và khuyến khích cầu thủ hướng tới những mục tiêu lớn. Ngoài ra, Nagelsmann cũng hướng tới việc giành chức vô địch Nations League trên sân nhà trước khi tham dự World Cup.",
+    "link": "https://vnexpress.net/nagelsmann-nhac-lai-muc-tieu-vo-dich-world-cup-2026-4863036.html",
+    "cat": "the-thao",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Nagelsmann có mục tiêu gì cho tuyển Đức trong World Cup 2026?",
+    "answers": [
+      {
+        "text": "Vô địch World Cup 2026",
+        "correct": true
+      },
+      {
+        "text": "Về nhì tại Euro 2024",
+        "correct": false
+      },
+      {
+        "text": "Giành vé dự World Cup 2026",
+        "correct": false
+      },
+      {
+        "text": "Thắng Nations League",
+        "correct": false
+      },
+      {
+        "text": "Chỉ tham gia vòng loại World Cup 2026",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Giá vé máy bay dịp lễ 30-4 bất ngờ tăng mạnh",
     "content": "Giá vé máy bay dịp lễ 30-4 và 1-5 đã tăng mạnh, với mức giá mới cao gấp 2-3 lần so với ngày thường. Nhiều hành khách cảm thấy choáng váng và phải tính toán lại kế hoạch du lịch do mức giá tăng vọt trên các chặng bay nội địa và quốc tế. Chẳng hạn, giá vé từ Hà Nội đến Đà Nẵng đã tăng từ 1,8 triệu lên 2,5 triệu đồng, trong khi một số chặng quốc tế như Hà Nội - Bangkok cũng ghi nhận mức tăng đáng kể. Các hãng hàng không đang tận dụng dịp cao điểm này để gia tăng doanh thu.",
     "link": "https://tuoitre.vn/gia-ve-may-bay-dip-le-30-4-bat-ngo-tang-manh-20250319074925782.htm",
@@ -2600,33 +2689,6 @@
     ]
   },
   {
-    "title": "Dấu hiệu nào cho thấy bạn bị suy giãn tĩnh mạch?",
-    "content": "Bài viết đề cập đến các dấu hiệu cho thấy bạn có thể bị suy giãn tĩnh mạch, bao gồm cảm giác đau, mỏi và tê bì ở tay chân hoặc chuột rút. Những triệu chứng này không phải lúc nào cũng dễ dàng nhận biết, khiến cho việc phát hiện bệnh trở nên khó khăn. Nếu bạn gặp phải những triệu chứng này, nên tham khảo ý kiến của các chuyên gia y tế để được kiểm tra và tư vấn.",
-    "link": "https://vnexpress.net/dau-hieu-nao-cho-thay-ban-bi-suy-gian-tinh-mach-4862849.html",
-    "cat": "suc-khoe",
-    "positivity": 6,
-    "importance": 7,
-    "question": "Những dấu hiệu nào cho thấy bạn có thể bị suy giãn tĩnh mạch?",
-    "answers": [
-      {
-        "text": "Cảm giác đau, mỏi và tê bì tay chân",
-        "correct": true
-      },
-      {
-        "text": "Đau đầu và chóng mặt",
-        "correct": false
-      },
-      {
-        "text": "Đau bụng và tiêu chảy",
-        "correct": false
-      },
-      {
-        "text": "Mệt mỏi và khó thở",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Những thực phẩm phòng thoái hóa điểm vàng mắt",
     "content": "Bài viết đề cập đến những thực phẩm giúp phòng ngừa thoái hóa điểm vàng mắt, một bệnh lý liên quan đến tuổi tác. Các loại thực phẩm như trái cây họ cam quýt, rau củ, các loại hạt và cá béo chứa nhiều vitamin và omega-3, có tác dụng bảo vệ sức khỏe mắt và làm chậm tiến triển của bệnh. Bài viết cũng nhấn mạnh tầm quan trọng của chế độ dinh dưỡng hợp lý để duy trì thị lực và giảm nguy cơ mắc các bệnh về mắt.",
     "link": "https://vnexpress.net/nhung-thuc-pham-phong-thoai-hoa-diem-vang-mat-4862809.html",
@@ -2649,6 +2711,33 @@
       },
       {
         "text": "Thực phẩm chế biến sẵn và đồ uống có ga",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Dấu hiệu nào cho thấy bạn bị suy giãn tĩnh mạch?",
+    "content": "Bài viết đề cập đến các dấu hiệu cho thấy bạn có thể bị suy giãn tĩnh mạch, bao gồm cảm giác đau, mỏi và tê bì ở tay chân hoặc chuột rút. Những triệu chứng này không phải lúc nào cũng dễ dàng nhận biết, khiến cho việc phát hiện bệnh trở nên khó khăn. Nếu bạn gặp phải những triệu chứng này, nên tham khảo ý kiến của các chuyên gia y tế để được kiểm tra và tư vấn.",
+    "link": "https://vnexpress.net/dau-hieu-nao-cho-thay-ban-bi-suy-gian-tinh-mach-4862849.html",
+    "cat": "suc-khoe",
+    "positivity": 6,
+    "importance": 7,
+    "question": "Những dấu hiệu nào cho thấy bạn có thể bị suy giãn tĩnh mạch?",
+    "answers": [
+      {
+        "text": "Cảm giác đau, mỏi và tê bì tay chân",
+        "correct": true
+      },
+      {
+        "text": "Đau đầu và chóng mặt",
+        "correct": false
+      },
+      {
+        "text": "Đau bụng và tiêu chảy",
+        "correct": false
+      },
+      {
+        "text": "Mệt mỏi và khó thở",
         "correct": false
       }
     ]
@@ -2805,37 +2894,6 @@
     ]
   },
   {
-    "title": "Dự kiến hoàn thành sáp nhập các tỉnh thành trước 30/8",
-    "content": "Bộ trưởng Nội vụ Phạm Thị Thanh Trà thông báo rằng việc sáp nhập các tỉnh thành trên toàn quốc sẽ hoàn tất trước ngày 30/8 và sẽ chính thức đi vào hoạt động từ tháng 9. Cùng với đó, việc sáp nhập các đơn vị hành chính cấp xã cũng sẽ hoàn thành trước 30/6. Bộ trưởng nhấn mạnh rằng quy trình này cần được thực hiện thận trọng, kỹ lưỡng và hiệu quả, đồng thời kêu gọi sự phối hợp chặt chẽ từ các bộ ngành để đảm bảo tiến độ thực hiện.",
-    "link": "https://vnexpress.net/du-kien-hoan-thanh-sap-nhap-cac-tinh-thanh-truoc-30-8-4862794.html",
-    "cat": "thoi-su",
-    "positivity": 8,
-    "importance": 9,
-    "question": "Khi nào việc sáp nhập các tỉnh thành sẽ hoàn tất?",
-    "answers": [
-      {
-        "text": "Trước 30/8",
-        "correct": true
-      },
-      {
-        "text": "Trước 30/6",
-        "correct": false
-      },
-      {
-        "text": "Trước 1/7",
-        "correct": false
-      },
-      {
-        "text": "Vào tháng 9",
-        "correct": false
-      },
-      {
-        "text": "Vào cuối năm 2025",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Bộ ngành giảm 22.000 biên chế sau tinh gọn",
     "content": "Các bộ, cơ quan ngang bộ và cơ quan thuộc Chính phủ đã giảm 22.323 biên chế, chiếm 20% tổng biên chế, trong quá trình tinh gọn bộ máy. Bộ trưởng Nội vụ, Phạm Thị Thanh Trà, cho biết đã giảm 13 tổng cục và tổ chức tương đương, cùng với nhiều cục, vụ và chi cục. Việc cải cách này được coi là một cuộc cách mạng trong hệ thống chính trị và nhằm nâng cao hiệu quả quản lý. Tuy nhiên, vẫn còn tồn tại tình trạng chồng chéo giữa các luật chuyên ngành cần được giải quyết.",
     "link": "https://vnexpress.net/bo-nganh-giam-22-000-bien-che-sau-tinh-gon-4862794.html",
@@ -2867,32 +2925,32 @@
     ]
   },
   {
-    "title": "Giảm 11 kg, giảm bệnh nền",
-    "content": "Chị Hà, 31 tuổi, đã giảm 11 kg sau khi điều trị béo phì tại Bệnh viện Đa khoa Tâm Anh TP HCM, giúp cải thiện tình trạng rối loạn kinh nguyệt và gan nhiễm mỡ. Khi bắt đầu, chị nặng gần 90 kg và mắc nhiều bệnh liên quan đến béo phì. Sau hai tháng áp dụng liệu trình giảm cân kết hợp thuốc và chế độ ăn uống hợp lý, sức khỏe của chị đã cải thiện rõ rệt, chu kỳ kinh nguyệt trở lại bình thường và các chỉ số sức khỏe cải thiện.",
-    "link": "https://vnexpress.net/giam-11-kg-giam-benh-nen-4862793.html",
-    "cat": "suc-khoe",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Chị Hà đã giảm được bao nhiêu kg và tình trạng sức khỏe có cải thiện không?",
+    "title": "Dự kiến hoàn thành sáp nhập các tỉnh thành trước 30/8",
+    "content": "Bộ trưởng Nội vụ Phạm Thị Thanh Trà thông báo rằng việc sáp nhập các tỉnh thành trên toàn quốc sẽ hoàn tất trước ngày 30/8 và sẽ chính thức đi vào hoạt động từ tháng 9. Cùng với đó, việc sáp nhập các đơn vị hành chính cấp xã cũng sẽ hoàn thành trước 30/6. Bộ trưởng nhấn mạnh rằng quy trình này cần được thực hiện thận trọng, kỹ lưỡng và hiệu quả, đồng thời kêu gọi sự phối hợp chặt chẽ từ các bộ ngành để đảm bảo tiến độ thực hiện.",
+    "link": "https://vnexpress.net/du-kien-hoan-thanh-sap-nhap-cac-tinh-thanh-truoc-30-8-4862794.html",
+    "cat": "thoi-su",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Khi nào việc sáp nhập các tỉnh thành sẽ hoàn tất?",
     "answers": [
       {
-        "text": "11 kg, sức khỏe cải thiện rõ rệt",
+        "text": "Trước 30/8",
         "correct": true
       },
       {
-        "text": "10 kg, sức khỏe không thay đổi",
+        "text": "Trước 30/6",
         "correct": false
       },
       {
-        "text": "12 kg, sức khỏe xấu hơn",
+        "text": "Trước 1/7",
         "correct": false
       },
       {
-        "text": "9 kg, không có thay đổi nào",
+        "text": "Vào tháng 9",
         "correct": false
       },
       {
-        "text": "8 kg, sức khỏe tệ hơn",
+        "text": "Vào cuối năm 2025",
         "correct": false
       }
     ]
@@ -2920,6 +2978,37 @@
       },
       {
         "text": "Đỗ xe một chiều và đỗ xe hai chiều",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Giảm 11 kg, giảm bệnh nền",
+    "content": "Chị Hà, 31 tuổi, đã giảm 11 kg sau khi điều trị béo phì tại Bệnh viện Đa khoa Tâm Anh TP HCM, giúp cải thiện tình trạng rối loạn kinh nguyệt và gan nhiễm mỡ. Khi bắt đầu, chị nặng gần 90 kg và mắc nhiều bệnh liên quan đến béo phì. Sau hai tháng áp dụng liệu trình giảm cân kết hợp thuốc và chế độ ăn uống hợp lý, sức khỏe của chị đã cải thiện rõ rệt, chu kỳ kinh nguyệt trở lại bình thường và các chỉ số sức khỏe cải thiện.",
+    "link": "https://vnexpress.net/giam-11-kg-giam-benh-nen-4862793.html",
+    "cat": "suc-khoe",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Chị Hà đã giảm được bao nhiêu kg và tình trạng sức khỏe có cải thiện không?",
+    "answers": [
+      {
+        "text": "11 kg, sức khỏe cải thiện rõ rệt",
+        "correct": true
+      },
+      {
+        "text": "10 kg, sức khỏe không thay đổi",
+        "correct": false
+      },
+      {
+        "text": "12 kg, sức khỏe xấu hơn",
+        "correct": false
+      },
+      {
+        "text": "9 kg, không có thay đổi nào",
+        "correct": false
+      },
+      {
+        "text": "8 kg, sức khỏe tệ hơn",
         "correct": false
       }
     ]
@@ -4634,6 +4723,33 @@
     ]
   },
   {
+    "title": "Khóa học tiếng Anh của tài tử Hoa ngữ Ngô Ngạn Tổ gây tranh cãi",
+    "content": "Khóa học tiếng Anh online của tài tử Ngô Ngạn Tổ đã gây ra nhiều tranh cãi sau khi ra mắt. Dù được quảng bá là cơ hội học tiếng Anh với ngữ điệu chuẩn như người bản ngữ, nhiều học viên cho rằng nội dung khóa học quá đơn giản và không đáp ứng được kỳ vọng của họ. Một số người còn đề nghị hoàn tiền vì chất lượng không như mong đợi, trong khi một số khác cho rằng khóa học này vẫn có giá trị nhất định cho những người mới bắt đầu học tiếng Anh.",
+    "link": "https://dantri.com.vn/giao-duc/khoa-hoc-tieng-anh-cua-tai-tu-hoa-ngu-ngo-ngan-to-gay-tranh-cai-20250317112008974.htm",
+    "cat": "giao-duc",
+    "positivity": 4,
+    "importance": 6,
+    "question": "Khóa học tiếng Anh của Ngô Ngạn Tổ có chất lượng như thế nào?",
+    "answers": [
+      {
+        "text": "Nội dung khóa học quá đơn giản và không đáp ứng được kỳ vọng.",
+        "correct": true
+      },
+      {
+        "text": "Khóa học rất hấp dẫn và chất lượng cao.",
+        "correct": false
+      },
+      {
+        "text": "Người học đều hài lòng với khóa học.",
+        "correct": false
+      },
+      {
+        "text": "Khóa học không có đủ bài học cần thiết.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Ôtô hybrid của Honda sẽ dùng pin của Toyota",
     "content": "Honda dự kiến sẽ sử dụng pin do Toyota sản xuất cho các mẫu ôtô hybrid tại Mỹ bắt đầu từ năm tài chính 2025. Quyết định này nhằm giảm rủi ro thuế quan dưới thời chính quyền Tổng thống Donald Trump. Khoảng 400.000 xe hybrid sẽ được trang bị pin sản xuất tại nhà máy của Toyota ở North Carolina. Honda cũng đang chuyển nhiều hoạt động sản xuất sang Mỹ để đối phó với thuế suất cao từ Mexico và Canada.",
     "link": "https://vnexpress.net/oto-hybrid-cua-honda-se-dung-pin-cua-toyota-4862583.html",
@@ -4660,33 +4776,6 @@
       },
       {
         "text": "Từ Tesla",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Khóa học tiếng Anh của tài tử Hoa ngữ Ngô Ngạn Tổ gây tranh cãi",
-    "content": "Khóa học tiếng Anh online của tài tử Ngô Ngạn Tổ đã gây ra nhiều tranh cãi sau khi ra mắt. Dù được quảng bá là cơ hội học tiếng Anh với ngữ điệu chuẩn như người bản ngữ, nhiều học viên cho rằng nội dung khóa học quá đơn giản và không đáp ứng được kỳ vọng của họ. Một số người còn đề nghị hoàn tiền vì chất lượng không như mong đợi, trong khi một số khác cho rằng khóa học này vẫn có giá trị nhất định cho những người mới bắt đầu học tiếng Anh.",
-    "link": "https://dantri.com.vn/giao-duc/khoa-hoc-tieng-anh-cua-tai-tu-hoa-ngu-ngo-ngan-to-gay-tranh-cai-20250317112008974.htm",
-    "cat": "giao-duc",
-    "positivity": 4,
-    "importance": 6,
-    "question": "Khóa học tiếng Anh của Ngô Ngạn Tổ có chất lượng như thế nào?",
-    "answers": [
-      {
-        "text": "Nội dung khóa học quá đơn giản và không đáp ứng được kỳ vọng.",
-        "correct": true
-      },
-      {
-        "text": "Khóa học rất hấp dẫn và chất lượng cao.",
-        "correct": false
-      },
-      {
-        "text": "Người học đều hài lòng với khóa học.",
-        "correct": false
-      },
-      {
-        "text": "Khóa học không có đủ bài học cần thiết.",
         "correct": false
       }
     ]
@@ -4772,60 +4861,6 @@
       },
       {
         "text": "Trận Monterrey vs Inter Milan",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Quận \"hot\" nhất TPHCM kiểm tra đột xuất dạy thêm học thêm",
-    "content": "Quận 1, TPHCM đã lên kế hoạch thành lập 2 tổ kiểm tra đột xuất hoạt động dạy thêm, học thêm trên địa bàn từ ngày 20/3 đến 15/4. Mục đích của việc kiểm tra này là nhằm đảm bảo an ninh, trật tự và tăng cường quản lý các cơ sở dạy thêm, học thêm. Các nội dung kiểm tra bao gồm giấy phép hoạt động, hồ sơ quản lý, và các thông tin liên quan đến học viên. Quận cũng sẽ xử lý nghiêm các cơ sở không phép hoặc không tuân thủ quy định.",
-    "link": "https://dantri.com.vn/giao-duc/quan-hot-nhat-tphcm-kiem-tra-dot-xuat-day-them-hoc-them-20250318081548250.htm",
-    "cat": "giao-duc",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Quận nào ở TPHCM đang tiến hành kiểm tra đột xuất hoạt động dạy thêm, học thêm?",
-    "answers": [
-      {
-        "text": "Quận 1",
-        "correct": true
-      },
-      {
-        "text": "Quận 2",
-        "correct": false
-      },
-      {
-        "text": "Quận 3",
-        "correct": false
-      },
-      {
-        "text": "Quận 4",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Israel ồ ạt tấn công Hamas ở Dải Gaza",
-    "content": "Israel đã tiến hành các cuộc tấn công diện rộng nhằm vào các mục tiêu của Hamas ở Dải Gaza, theo thông báo từ Văn phòng Thủ tướng Israel. Mục tiêu của các cuộc tấn công này là để buộc Hamas thả các con tin mà họ đang giữ. Các cuộc không kích đã gây thiệt hại đáng kể, với ít nhất 20 người thiệt mạng, bao gồm cả trẻ em, trong khi nhiều người khác mắc kẹt trong các ngôi nhà bị sập. Đây được xem là sự trở lại của các chiến dịch quân sự của Israel chống lại Hamas sau thời gian lệnh ngừng bắn.",
-    "link": "https://dantri.com.vn/the-gioi/israel-o-at-tan-cong-hamas-o-dai-gaza-20250318081700894.htm",
-    "cat": "the-gioi",
-    "positivity": 2,
-    "importance": 9,
-    "question": "Tại sao Israel lại tiến hành tấn công vào Dải Gaza?",
-    "answers": [
-      {
-        "text": "Để buộc Hamas thả các con tin",
-        "correct": true
-      },
-      {
-        "text": "Để chiếm đất",
-        "correct": false
-      },
-      {
-        "text": "Để bảo vệ biên giới",
-        "correct": false
-      },
-      {
-        "text": "Để trả thù cho các vụ tấn công trước đó",
         "correct": false
       }
     ]
