Batch update of generated files

--- a/home_shortnews.html
+++ b/home_shortnews.html
@@ -170,6 +170,33 @@
     ]
   },
   {
+    "title": "Vỡ đôi tinh hoàn vì con trai dùng đồ chơi đập trúng",
+    "content": "Một người đàn ông 51 tuổi ở TP HCM đã bị vỡ tinh hoàn sau khi con trai 8 tuổi dùng đồ chơi bằng gỗ đập vào bìu bên trái trong khi ông đang ngủ. Sau khi nhập viện với triệu chứng sưng đau, bác sĩ đã xác định tình trạng vỡ tinh hoàn và tiến hành phẫu thuật khắc phục. Bệnh nhân đã hồi phục hoàn toàn sau 5 ngày điều trị. Vỡ tinh hoàn là một cấp cứu nam khoa hiếm gặp nhưng có thể gây ra biến chứng nghiêm trọng nếu không được điều trị kịp thời.",
+    "link": "https://vnexpress.net/vo-doi-tinh-hoan-vi-con-trai-dung-do-choi-dap-trung-4863045.html",
+    "cat": "suc-khoe",
+    "positivity": 6,
+    "importance": 7,
+    "question": "Nguyên nhân nào khiến người đàn ông 51 tuổi bị vỡ tinh hoàn?",
+    "answers": [
+      {
+        "text": "Con trai dùng đồ chơi đập vào bìu",
+        "correct": true
+      },
+      {
+        "text": "Ông bị tai nạn giao thông",
+        "correct": false
+      },
+      {
+        "text": "Ông tham gia thể thao không an toàn",
+        "correct": false
+      },
+      {
+        "text": "Ông bị ngã trong nhà",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Giá vé máy bay dịp lễ 30-4 bất ngờ tăng mạnh",
     "content": "Giá vé máy bay dịp lễ 30-4 và 1-5 đã tăng mạnh, với mức giá mới cao gấp 2-3 lần so với ngày thường. Nhiều hành khách cảm thấy choáng váng và phải tính toán lại kế hoạch du lịch do mức giá tăng vọt trên các chặng bay nội địa và quốc tế. Chẳng hạn, giá vé từ Hà Nội đến Đà Nẵng đã tăng từ 1,8 triệu lên 2,5 triệu đồng, trong khi một số chặng quốc tế như Hà Nội - Bangkok cũng ghi nhận mức tăng đáng kể. Các hãng hàng không đang tận dụng dịp cao điểm này để gia tăng doanh thu.",
     "link": "https://tuoitre.vn/gia-ve-may-bay-dip-le-30-4-bat-ngo-tang-manh-20250319074925782.htm",
@@ -1812,33 +1839,6 @@
     ]
   },
   {
-    "title": "7 trái cây giàu protein hỗ trợ giảm mỡ",
-    "content": "Bài viết giới thiệu 7 loại trái cây giàu protein giúp hỗ trợ quá trình giảm mỡ, bao gồm ổi, bơ, kiwi, mít, chanh dây, mơ và lựu. Những trái cây này không chỉ cung cấp protein mà còn chứa chất xơ và các vitamin cần thiết cho cơ thể, giúp tạo cảm giác no lâu và tăng cường sức khỏe. Mặc dù hàm lượng protein trong trái cây không cao như trong thịt hay đậu, nhưng chúng vẫn mang lại nhiều lợi ích cho việc quản lý cân nặng và sức khỏe tổng thể.",
-    "link": "https://vnexpress.net/7-trai-cay-giau-protein-ho-tro-giam-mo-4862631.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Những trái cây nào giàu protein hỗ trợ giảm mỡ?",
-    "answers": [
-      {
-        "text": "Ổi, bơ, kiwi, mít, chanh dây, mơ, lựu",
-        "correct": true
-      },
-      {
-        "text": "Táo, chuối, dưa hấu, nho, dâu tây",
-        "correct": false
-      },
-      {
-        "text": "Cam, dứa, dưa gang, xoài, kiwi",
-        "correct": false
-      },
-      {
-        "text": "Nho, bơ, dưa hấu, mâm xôi, dừa",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "\"Vovinam Dance\": Kết hợp võ thuật với vũ đạo, sân chơi mới cho giới trẻ",
     "content": "Cuộc thi \"Vovinam Dance 2025\" vừa được tổ chức tại Hà Nội, do Đài PT-TH Hà Nội và Liên đoàn Vovinam Việt Nam phối hợp thực hiện. Đây là sự kiện kết hợp giữa võ thuật và nghệ thuật, nhằm tôn vinh kỷ niệm 50 năm Ngày Giải phóng miền Nam và 80 năm Quốc khánh Việt Nam. Cuộc thi không chỉ là sân chơi cho các võ sinh và vũ công mà còn là cơ hội để quảng bá văn hóa Vovinam ra thế giới, với tổng giải thưởng lên tới 550 triệu đồng.",
     "link": "https://dantri.com.vn/giai-tri/vovinam-dance-ket-hop-vo-thuat-voi-vu-dao-san-choi-moi-cho-gioi-tre-20250318203314904.htm",
@@ -1861,6 +1861,33 @@
       },
       {
         "text": "Tổ chức giải thưởng cho các môn thể thao khác",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "7 trái cây giàu protein hỗ trợ giảm mỡ",
+    "content": "Bài viết giới thiệu 7 loại trái cây giàu protein giúp hỗ trợ quá trình giảm mỡ, bao gồm ổi, bơ, kiwi, mít, chanh dây, mơ và lựu. Những trái cây này không chỉ cung cấp protein mà còn chứa chất xơ và các vitamin cần thiết cho cơ thể, giúp tạo cảm giác no lâu và tăng cường sức khỏe. Mặc dù hàm lượng protein trong trái cây không cao như trong thịt hay đậu, nhưng chúng vẫn mang lại nhiều lợi ích cho việc quản lý cân nặng và sức khỏe tổng thể.",
+    "link": "https://vnexpress.net/7-trai-cay-giau-protein-ho-tro-giam-mo-4862631.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Những trái cây nào giàu protein hỗ trợ giảm mỡ?",
+    "answers": [
+      {
+        "text": "Ổi, bơ, kiwi, mít, chanh dây, mơ, lựu",
+        "correct": true
+      },
+      {
+        "text": "Táo, chuối, dưa hấu, nho, dâu tây",
+        "correct": false
+      },
+      {
+        "text": "Cam, dứa, dưa gang, xoài, kiwi",
+        "correct": false
+      },
+      {
+        "text": "Nho, bơ, dưa hấu, mâm xôi, dừa",
         "correct": false
       }
     ]
@@ -3250,33 +3277,6 @@
     ]
   },
   {
-    "title": "Bị ung thư đại tràng có nên kiêng rau củ?",
-    "content": "Bài viết đề cập đến việc người bệnh ung thư đại tràng có nên kiêng rau củ hay không. Theo các chuyên gia, người bệnh nên có chế độ ăn uống cân bằng và đa dạng, bao gồm cả rau củ để cung cấp vitamin và khoáng chất cần thiết. Tuy nhiên, trong một số trường hợp như tắc ruột hoặc tiêu chảy kéo dài, cần hạn chế thực phẩm chứa chất xơ và ưu tiên rau củ mềm, nấu chín kỹ để dễ tiêu hóa. Bác sĩ dinh dưỡng cũng có thể tư vấn chế độ ăn phù hợp theo tình trạng cụ thể của từng bệnh nhân.",
-    "link": "https://vnexpress.net/bi-ung-thu-dai-trang-co-nen-kieng-rau-cu-4862655.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 9,
-    "question": "Người bệnh ung thư đại tràng có nên ăn rau củ không?",
-    "answers": [
-      {
-        "text": "Có, họ nên ăn rau củ để cung cấp dinh dưỡng cần thiết.",
-        "correct": true
-      },
-      {
-        "text": "Không, rau củ hoàn toàn không nên ăn.",
-        "correct": false
-      },
-      {
-        "text": "Chỉ nên ăn rau củ khi không có triệu chứng gì.",
-        "correct": false
-      },
-      {
-        "text": "Có thể ăn rau củ nhưng chỉ nên ăn sống.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Điều trị u gan trên nền xơ gan thế nào?",
     "content": "Bài viết đề cập đến việc điều trị u gan ở người bệnh xơ gan, cụ thể là trường hợp người bệnh phát hiện nhiều khối u gan và viêm gan virus B. Phương pháp điều trị sẽ phụ thuộc vào kích thước và vị trí của khối u, có thể bao gồm nút mạch hoặc phẫu thuật. Đối với khối u nhỏ, có thể sử dụng đốt sóng cao tần hoặc tiêm cồn. Tuy nhiên, đối với người mắc viêm gan virus B, cần thận trọng vì có thể gây ra suy gan nhanh chóng.",
     "link": "https://vnexpress.net/dieu-tri-u-gan-tren-nen-xo-gan-the-nao-4862660.html",
@@ -3299,6 +3299,33 @@
       },
       {
         "text": "Dùng thuốc truyền thống để chữa trị",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Bị ung thư đại tràng có nên kiêng rau củ?",
+    "content": "Bài viết đề cập đến việc người bệnh ung thư đại tràng có nên kiêng rau củ hay không. Theo các chuyên gia, người bệnh nên có chế độ ăn uống cân bằng và đa dạng, bao gồm cả rau củ để cung cấp vitamin và khoáng chất cần thiết. Tuy nhiên, trong một số trường hợp như tắc ruột hoặc tiêu chảy kéo dài, cần hạn chế thực phẩm chứa chất xơ và ưu tiên rau củ mềm, nấu chín kỹ để dễ tiêu hóa. Bác sĩ dinh dưỡng cũng có thể tư vấn chế độ ăn phù hợp theo tình trạng cụ thể của từng bệnh nhân.",
+    "link": "https://vnexpress.net/bi-ung-thu-dai-trang-co-nen-kieng-rau-cu-4862655.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Người bệnh ung thư đại tràng có nên ăn rau củ không?",
+    "answers": [
+      {
+        "text": "Có, họ nên ăn rau củ để cung cấp dinh dưỡng cần thiết.",
+        "correct": true
+      },
+      {
+        "text": "Không, rau củ hoàn toàn không nên ăn.",
+        "correct": false
+      },
+      {
+        "text": "Chỉ nên ăn rau củ khi không có triệu chứng gì.",
+        "correct": false
+      },
+      {
+        "text": "Có thể ăn rau củ nhưng chỉ nên ăn sống.",
         "correct": false
       }
     ]
@@ -4467,33 +4494,6 @@
       },
       {
         "text": "Khóa học không có đủ bài học cần thiết.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Van Dijk lo Liverpool mất nốt Ngoại hạng Anh",
-    "content": "Trung vệ Virgil van Dijk của Liverpool kêu gọi các đồng đội vượt qua những thất bại gần đây tại Champions League và Cup Liên đoàn. Anh nhấn mạnh rằng đội bóng vẫn còn cơ hội giành danh hiệu Ngoại hạng Anh và cần nỗ lực hết mình trong chín trận còn lại. Liverpool đang dẫn đầu giải đấu với 70 điểm, nhưng sẽ phải đối mặt với nhiều thử thách lớn từ các đối thủ như Arsenal và Chelsea.",
-    "link": "https://vnexpress.net/van-dijk-lo-liverpool-mat-not-ngoai-hang-anh-4862567.html",
-    "cat": "the-thao",
-    "positivity": 5,
-    "importance": 8,
-    "question": "Liverpool có còn cơ hội giành Ngoại hạng Anh không?",
-    "answers": [
-      {
-        "text": "Có, họ đang dẫn đầu với 70 điểm.",
-        "correct": true
-      },
-      {
-        "text": "Không, họ đã thua nhiều trận và không thể phục hồi.",
-        "correct": false
-      },
-      {
-        "text": "Họ đã chắc chắn mất chức vô địch.",
-        "correct": false
-      },
-      {
-        "text": "Họ cần phải thắng tất cả các trận còn lại.",
         "correct": false
       }
     ]
