Batch update of generated files

--- a/home.html
+++ b/home.html
@@ -175,6 +175,33 @@
     ]
   },
   {
+    "title": "Xe điện ở California có thể mất đặc quyền làn ưu tiên",
+    "content": "Xe điện ở California có thể sẽ không còn đặc quyền sử dụng làn đường dành cho xe chở nhiều người từ tháng 10 tới. Hiện tại, các xe điện, dù chỉ chở một người, vẫn được phép chạy vào làn này, nhưng điều này có thể thay đổi. Chương trình này đã tồn tại từ năm 1998, nhằm khuyến khích người dân chuyển sang sử dụng xe không phát thải, nhưng quyền lợi này đang bị xem xét lại.",
+    "link": "https://vnexpress.net/xe-dien-o-california-co-the-mat-dac-quyen-lan-uu-tien-4862740.html",
+    "cat": "oto-xe-may",
+    "positivity": 4,
+    "importance": 7,
+    "question": "Xe điện ở California có thể mất đặc quyền gì vào tháng 10 tới?",
+    "answers": [
+      {
+        "text": "Làn đường dành cho xe chở nhiều người",
+        "correct": true
+      },
+      {
+        "text": "Giảm thuế cho xe điện",
+        "correct": false
+      },
+      {
+        "text": "Quyền sử dụng bãi đỗ xe miễn phí",
+        "correct": false
+      },
+      {
+        "text": "Giảm giá khi mua xe điện",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Bộ đội mới xuất ngũ đi xuất khẩu lao động cần phải có bằng cấp 2?",
     "content": "Bài viết cung cấp thông tin về việc người lao động xuất ngũ từ quân đội có cần bằng cấp 2 để tham gia xuất khẩu lao động hay không. Luật sư Nguyễn Ngô Quang Nhật đã tư vấn rằng pháp luật Việt Nam không yêu cầu người lao động phải có bằng cấp 2 để đi làm việc ở nước ngoài. Tuy nhiên, người lao động cần chú ý đến các yêu cầu của nước tiếp nhận lao động, bao gồm sức khỏe và trình độ chuyên môn.",
     "link": "https://tuoitre.vn/bo-doi-moi-xuat-ngu-di-xuat-khau-lao-dong-can-phai-co-bang-cap-2-2025031522262342.htm",
@@ -1087,33 +1114,6 @@
     ]
   },
   {
-    "title": "Đi viện hết cảnh 'xếp hàng, chờ kết quả' nhờ chuyển đổi số",
-    "content": "Bệnh viện Bạch Mai đã triển khai chuyển đổi số toàn diện, giúp bệnh nhân không cần chờ đợi lâu để nhận kết quả xét nghiệm. Thay vào đó, họ có thể sử dụng ứng dụng Bạch Mai Care để theo dõi kết quả và lịch sử khám chữa bệnh một cách thuận tiện. Việc này không chỉ tiết kiệm thời gian cho bệnh nhân mà còn giúp giảm áp lực cho nhân viên y tế. Chuyển đổi số trong ngành y tế đang là xu hướng tất yếu, với nhiều bệnh viện khác cũng bắt đầu áp dụng công nghệ mới để cải thiện dịch vụ khám chữa bệnh.",
-    "link": "https://vnexpress.net/di-vien-het-canh-xep-hang-cho-ket-qua-nho-chuyen-doi-so-4862770.html",
-    "cat": "suc-khoe",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Chuyển đổi số tại Bệnh viện Bạch Mai đã mang lại lợi ích gì cho bệnh nhân?",
-    "answers": [
-      {
-        "text": "Giúp bệnh nhân không phải chờ đợi lâu để nhận kết quả xét nghiệm.",
-        "correct": true
-      },
-      {
-        "text": "Giảm chi phí khám bệnh cho bệnh nhân.",
-        "correct": false
-      },
-      {
-        "text": "Tăng cường số lượng bác sĩ tại bệnh viện.",
-        "correct": false
-      },
-      {
-        "text": "Cung cấp thêm nhiều loại thuốc mới cho bệnh nhân.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Xe Tesla không phân biệt được bức tường giả",
     "content": "Trong một thử nghiệm so sánh giữa xe Tesla và Lexus, hệ thống Autopilot của Tesla đã không phát hiện được bức tường giả được vẽ giống như đường đi, dẫn đến việc xe đâm vào bức tường này. Trong khi đó, xe Lexus trang bị lidar đã dừng lại an toàn. Thử nghiệm cho thấy rằng công nghệ lidar có khả năng phát hiện chính xác hơn các vật thể trong môi trường so với chỉ sử dụng camera như Tesla. Elon Musk trước đó đã chỉ trích lidar là không cần thiết và đắt tiền.",
     "link": "https://vnexpress.net/xe-tesla-khong-phan-biet-duoc-buc-tuong-gia-4862379.html",
@@ -1136,6 +1136,33 @@
       },
       {
         "text": "Vì bức tường giả quá nhỏ nên xe Tesla không thấy.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Đi viện hết cảnh 'xếp hàng, chờ kết quả' nhờ chuyển đổi số",
+    "content": "Bệnh viện Bạch Mai đã triển khai chuyển đổi số toàn diện, giúp bệnh nhân không cần chờ đợi lâu để nhận kết quả xét nghiệm. Thay vào đó, họ có thể sử dụng ứng dụng Bạch Mai Care để theo dõi kết quả và lịch sử khám chữa bệnh một cách thuận tiện. Việc này không chỉ tiết kiệm thời gian cho bệnh nhân mà còn giúp giảm áp lực cho nhân viên y tế. Chuyển đổi số trong ngành y tế đang là xu hướng tất yếu, với nhiều bệnh viện khác cũng bắt đầu áp dụng công nghệ mới để cải thiện dịch vụ khám chữa bệnh.",
+    "link": "https://vnexpress.net/di-vien-het-canh-xep-hang-cho-ket-qua-nho-chuyen-doi-so-4862770.html",
+    "cat": "suc-khoe",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Chuyển đổi số tại Bệnh viện Bạch Mai đã mang lại lợi ích gì cho bệnh nhân?",
+    "answers": [
+      {
+        "text": "Giúp bệnh nhân không phải chờ đợi lâu để nhận kết quả xét nghiệm.",
+        "correct": true
+      },
+      {
+        "text": "Giảm chi phí khám bệnh cho bệnh nhân.",
+        "correct": false
+      },
+      {
+        "text": "Tăng cường số lượng bác sĩ tại bệnh viện.",
+        "correct": false
+      },
+      {
+        "text": "Cung cấp thêm nhiều loại thuốc mới cho bệnh nhân.",
         "correct": false
       }
     ]
